--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
   <link rel="stylesheet" href="style.css" />
   <script src="index.js" defer></script>
 </head>
-<!-- Botão Flutuante do WhatsApp -->
-<a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-button" aria-label="Fale conosco no WhatsApp">
-  <img src="https://cdn.jsdelivr.net/gh/edent/SuperTinyIcons/images/svg/whatsapp.svg" alt="WhatsApp" />
-</a>
 
 <body>
+  <!-- Botão Flutuante do WhatsApp -->
+  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-button" aria-label="Fale conosco no WhatsApp">
+    <img src="https://cdn.jsdelivr.net/gh/edent/SuperTinyIcons/images/svg/whatsapp.svg" alt="WhatsApp" />
+  </a>
 
   <header>
     <nav>
-  <h1>DELIVERY</h1>
-
-  <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-
-  <ul class="menu">
-    <li><a href="#">Produtos</a></li>
-    <li><a href="#">Contato</a></li>
-    <li><a href="#">Instagram</a></li>
-  </ul>
-</nav>
+      <h1>DELIVERY</h1>
+      <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
+      <ul class="menu">
+        <li><a href="#produtos">Produtos</a></li>
+        <li><a href="#contato">Contato</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
@@ -36,7 +34,7 @@
     </section>
 
     <!-- Seção dos produtos -->
-    <section class="produtos-section">
+    <section class="produtos-section" id="produtos">
       <h3>Nossos Produtos</h3>
       <div class="produtos-grid">
         <!-- Produto 1 -->
@@ -75,9 +73,7 @@
   </main>
 
   <footer id="contato">
-  
     <p>© 2025 Delivery – Todos os direitos reservados</p>
   </footer>
-
 </body>
 </html>
