--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="style.css" />
   <script src="index.js" defer></script>
 </head>
-
 <body>
   <!-- Botão Flutuante do WhatsApp -->
-  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-button" aria-label="Fale conosco no WhatsApp">
+  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-button" aria-label="Fale conosco no WhatsApp" rel="noopener noreferrer">
     <img src="https://cdn.jsdelivr.net/gh/edent/SuperTinyIcons/images/svg/whatsapp.svg" alt="WhatsApp" />
   </a>
 
@@ -21,23 +20,20 @@
       <ul class="menu">
         <li><a href="#produtos">Produtos</a></li>
         <li><a href="#contato">Contato</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="https://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- Cartaz inicial -->
     <section class="cartaz">
       <h2>Produtos de <br> Qualidade</h2>
       <p>Conheça nossa seleção exclusiva e <br> compre com segurança.</p>
     </section>
 
-    <!-- Seção dos produtos -->
     <section class="produtos-section" id="produtos">
       <h3>Nossos Produtos</h3>
       <div class="produtos-grid">
-        <!-- Produto 1 -->
         <div class="card-produto">
           <img src="imgs/img-relogio.jpg" alt="Produto 1">
           <h4>Produto 1</h4>
@@ -45,7 +41,6 @@
           <button class="btn-comprar">COMPRAR</button>
         </div>
 
-        <!-- Produto 2 -->
         <div class="card-produto">
           <img src="imgs/img-relogio.jpg" alt="Produto 2">
           <h4>Produto 2</h4>
@@ -53,7 +48,6 @@
           <button class="btn-comprar">COMPRAR</button>
         </div>
 
-        <!-- Produto 3 -->
         <div class="card-produto">
           <img src="imgs/img-relogio.jpg" alt="Produto 3">
           <h4>Produto 3</h4>
@@ -61,7 +55,6 @@
           <button class="btn-comprar">COMPRAR</button>
         </div>
 
-        <!-- Produto 4 -->
         <div class="card-produto">
           <img src="imgs/img-relogio.jpg" alt="Produto 4">
           <h4>Produto 4</h4>
